# job_parser

./: Python.json  README.md  main.py  pyproject.toml  Аналитик.json  Сосудистый Хирург.json
src/: api_job.py  app_json.py  utils.py  vacancy.py  working_with_vacancies.py
